--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -145,3 +145,7 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+MaxSubsteps=5
+
